* Added basic support for ipuz file format.
* Added dialog to modify the appearance of the puzzle.
* Added popup menu for individual cells.
* Added properties dialog for modifying individual cells.
* Added ability to show words of selected length in properties window.
* Added various options for export to PDF.
* Added button in new puzzle window for finding grids with specified words.

0.1.5 (April 19, 2011)
* XPF 1.0 is supported (except right-to-left editing)
* Disabled a variety of features for this release.
* Added export to PDF and PNG.
* Speed improvements to XML parser.
* Speed improvements to displaying list of words.
* Various other speed improvements

0.1.4 (June 13, 2010)
* Disabled various features for future release.
* Speed optimizations and refactoring.

0.1.3 (May 24, 2010)
* Added ability to select words by length in properties window.
* Added Scrabble score to properties window.
* Added partial support to read/write XPF 0.9.
* Replaced XML Schema by strict parser.
* Undo/redo rewritten to use states instead of functions.
* Fixed bug in search when an intersecting word is filled in.
* Added ability to show only unused words.
* Improved readability of properties window.
* Added ability to highlight characters in the grid in properties window.
* Added ability to store arbitrary text with a puzzle.
* Fixed bug with rendering of lines near border.
* Added 90 degree rotational symmetry and symmetry along diagonals.
* Added partial support for overriding cell styles.
* Added partial support for circles.
* Improved speed of new puzzle window.
* Improved speed of rendering a grid.
* Added popup menu for words in the word list.
* Added open cell count to properties window.
* Added connectedness to properties window.
* Added editor to Metadata tab in properties window.
* Added popup menu for cells in the grid.
* Added properties dialog for cells.
* Integrated pattern editor into new puzzle window.